8236996: Incorrect Roboto font rendering on Windows with subpixel antialiasing

Reviewed-by: prr, serb